# battleShip

./: CMakeLists.txt  README.md  main.cpp
Ai/: Ai.cpp  Ai.h
Board/: Board.cpp  Board.h
Game/: Game.cpp  Game.h
Player/: Player.cpp  Player.h
Ship/: Ship.cpp  Ship.h
